Mobile spacing fixes

--- a/cfgov/unprocessed/css/organisms/prefooter.less
+++ b/cfgov/unprocessed/css/organisms/prefooter.less
@@ -26,12 +26,12 @@
 .prefooter {
     .block();
 
-    margin-right: unit( @grid_gutter-width * -2 / @base-font-size-px, em );
-    margin-left: unit( @grid_gutter-width * -2 / @base-font-size-px, em );
+    margin-right: unit( @grid_gutter-width / -2 / @base-font-size-px, em );
+    margin-left: unit( @grid_gutter-width / -2 / @base-font-size-px, em );
     margin-bottom: 0;
 
     border-top: 1px solid @block__border-top;
-    border-right: 1px solid @block__border-right;
+
 
     padding-top: unit( @grid_gutter-width / @base-font-size-px, em );
     padding-left: unit( ( @grid_gutter-width / 2) / @base-font-size-px, em);
@@ -43,6 +43,9 @@
     .respond-to-min(@bp-sm-min, {
         margin-right: unit( -@grid_gutter-width / @base-font-size-px, em );
         margin-left: unit( -@grid_gutter-width / @base-font-size-px, em );
+
+        border-right: 1px solid @block__border-right;
+
         padding-left: unit( @grid_gutter-width / @base-font-size-px, em);
         padding-right: unit( @grid_gutter-width / @base-font-size-px, em);
     });
